app/assets/stylesheets/views/travel-advice.scss
@import "_device-pixels.scss";
@import "_shims.scss";

.travel-advice {
  article {
    .list {
      ul {
        padding-left: 0;
      }
      ul.countries {
        li {
          a {
            margin-right: 10px;

          }
          color: $grey-1;
        }
      }

      li {
        list-style: none;
        padding-left: 0;

        @include media(mobile) {
          margin-left: 0;
        }

        .meta{
          @include core-16;
          color: $grey-1;

        }
      }
    }

    #country-filter {
      h1 {
        @include inline-block;
        @include core-27;
        font-weight: 600;
        margin: 0 0 0.4em 0;

        @include ie-lte(7) {
          margin-right: 5.85em;
        }

        @include ie-lte(6) {
          margin-right: 1.3em;
        }
      }

      form {
        @include core-19;

        display: none;
        margin: 1em 0;

        .js-enabled & {
          display: block;
        }

        fieldset {
          border-bottom: 1px solid #A6AAAC;
          padding: 0 0 1em;
          color: #53595B;

          label {
            position: absolute;
            left: -9999em;
          }

          input {
            display: inline-block;
            border-color: #A6AAAC;
            margin: 0;
          }
        }
      }
    }
  }

  .country-metadata {
    padding: 0;
    margin: 0;
    color: $secondary-text-colour;

    li {
      @include core-16;

      list-style: none;
      padding: 0;
      .label {
        display: inline-block;
        width: 7em;
      }
      p {
        @include core-16;
        // margin-top: 0.5em;
      }
    }
  }

  .meta-data .print-link {
    margin: 1em 0;
  }

  .subscriptions  {
    float: right;
    text-align: right;
    width: 49%;
    padding-top: 1em;

    @include media-down(tablet) {
      float: none;
      text-align: left;
      width: auto;
      padding-top: 0;

      ul li:first-child {
        margin-left: 0;
      }
    }

    ul {
      list-style: none;
      margin: 0;
      padding: 0;
      display: block;
      width:100%;
      clear: both;

      li {
        margin-bottom: 0.25em;
        text-align: left;
        display: inline;
      }

      li:first-child {
        margin-right:1.5em;
      }

      @include ie(6) {
        list-style-image: none;
      }

      a {
        padding-left: 28px;
        height: 16px;
        background-position: 0 50%;
        background-repeat: no-repeat;

        &.feed {
          background-image: image-url("travel-advice/feed-icon-black.png");
        }

        &.email-alerts {
          background-image: image-url("travel-advice/mail-icon.png");
          @include device-pixel-ratio() {
            background-image: image-url("travel-advice/mail-icon-x2.png");
            background-size: 20px 14px;
          }
        }
      }
    }
  }

  aside {
    .page-navigation {
      
      li {
        list-style:none;
        margin-left: 0;
      }
      
      @include media(mobile) {
        li,
        ol[start] li,
        li a,
        li span {
          margin-left: 0;
        }

        li.active {
          border-top: solid 1px #a1acb2;
          margin: 0;
          padding: 1em;
        }

        li a {
          padding-left: 1em;
        }

        li span {
          display: block;
          padding: 0;
          border-top: none;
        }
      }
    }
    .subscriptions  {
      padding-top: 2em;
      clear: left;
      float: none;
      text-align: left;
      width: auto;

      a[rel=external] {
        @include external-link-16;
      }
    }
  }

  &#wrapper .article-container .subscriptions a:hover { 
    color: #2E8ACA;
  }

  .countries-wrapper {
    padding-top: 1em;

    h1 {
      @include core-19;
      margin-top: 0;
    }

    p.country-count {
      margin: 0;
      span.js-filter-count {
        @include core-48;
        font-weight: 600;
      }
    }
    
    .list {}

    h2 {
      font-weight: 400; 
    }
  }
}

